--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,9 @@
 {
   "name": "valentine-card",
   "compatibility_date": "2026-02-07",
+  "build": {
+    "command": "bun run build"
+  },
   "assets": {
     "directory": "./dist"
   }
